Project page layout fixes from Rosa; align images to right.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,7 +45,7 @@ code {
 }
 
 blockquote {
-  font-style: italic;
+    font-style: italic;
 }
 
 /*
@@ -436,11 +436,9 @@ img {
         margin-bottom: 0;
     }
     .project-date {
-        padding-bottom: 1em;
         font-family: $heading-font-family;
         text-transform: uppercase;
         color: $medium-gray;
-        text-align: right;
     }
     .project-image {
         margin: 0;
@@ -451,26 +449,40 @@ img {
         border-radius: 5px;
         height: auto;
         box-shadow: 5px 5px 5px $light-gray;
-        width: 100%;
+        max-width: 100%;
     }
     .project-description {
     }
     @include media($mobile) {
         .project-image {
-            float: left;
+            clear: both;
+            float: right;
             width: 40%;
+            line-height: 300px;
+            text-align: right;
         }
 
         img {
             margin: 0;
+            display: inline;
+            vertical-align: middle;
+        }
+
+        h3 {
+            float: left;
+            width: 75%;
         }
 
         .project-date {
+            padding-bottom: 1em;
             float: right;
+            line-height: 1.8em;
+            text-align: right;
+            width: 25%;
         }
         .project-description {
             padding: 20px;
-            /*padding-top: 2em;*/
+            padding-left: 0;
             font-size: 1.2em;
             float: right;
             width: 60%;
